# many

./: .env.example  ai-chat.js  ai-reports.js  analytics.js  api.js  app.js  auth.js  base.css  components.css  config.js  credit-cards.js  dashboard.js  fab.js  goals.js  i18n.js  icon-picker.js  index.html  layout.css  main.js  new-features.css  onboarding.js  operations-list.js  operations.js  package.json  pages.css  paywall.js  pyproject.toml  railway.toml  receipt-scanner.js  reserve.js  settings-ui.js  storage.js  style.css  sw.js  transfer.js  utils.js  vercel.json  wallets.js
api/: _crypto.js  _firestore.js  _llm.js  _mcc.js  _mono.js  _push-send.js  _telegram-core.js  ai-chat.js  ai-report.js  ai.js  analyze-receipt.js  cron-push.js  join-family.js  mono-backfill.js  mono-connect.js  mono-disconnect.js  mono-save.js  mono-webhook.js  mono.js  paddle-config.js  paddle-webhook.js  paddle.js  stripe-checkout.js  stripe-webhook.js  telegram-public.js  telegram-remind.js  telegram-summary.js  telegram.js
src/: config.py  main.py
src/agents/: cook.py  nanny.py
src/db/: migrations.py
src/integrations/: railway_api.py  supabase_baby.py
src/orchestrator/: dispatcher.py
src/prompts/: dispatcher.py
tests/: test_access_control.py  test_dispatcher.py  test_external_finn.py
tests/test_integrations/: test_supabase_baby.py
